--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,7 @@
     <nav>
       <a href="/listings" <%- title === 'All Listings' ? 'class="active"' : '' %>>ALL LISTINGS</a>
       <% if (user) { %>
-        <a href="/newlistings" <%- title === 'Add Listing' ? 'class="active"' : '' %>>ADD LISTING</a>
+        <a href="/newlistings/new" <%- title === 'Add Listing' ? 'class="active"' : '' %>>ADD LISTING</a>
         <a href="/listings/reserve" <%- title === 'Reserve Listing' ? 'class="active"' : '' %>>RESERVE LISTING</a>
         <a href="/listings/review" <%- title === 'Review Listing' ? 'class="active"' : '' %>>REVIEW LISTING</a>
         <a href="/logout">LOG OUT</a>
