--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,8 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-direction: column;
   min-height: 100vh;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -40,4 +42,40 @@ footer {
   font-weight: 400;
   padding: 10px;
   backdrop-filter: blur(20px); /* Increase the blur value for a stronger effect */
+}
+
+#addListingForm {
+  width: 400px; /* Adjust the width as needed */
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: #fff; /* Add a background color to the form */
+  box-sizing: border-box;
+}
+
+#addListingForm label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+#addListingForm input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px; /* Increase the margin for better spacing */
+  box-sizing: border-box;
+}
+
+#addListingForm button {
+  background-color: #4caf50;
+  color: white;
+  padding: 12px; /* Increase padding for a larger button */
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 100%
+}
+
+#addListingForm button:hover {
+  background-color: #45a049;
 }
