--- a/views/newlistings/new.ejs
+++ b/views/newlistings/new.ejs
@@ -1,21 +1,27 @@
 <%- include('../partials/header') %>
 
 
-<form id="addListingForm" action="/newlistings" method="POST">
+<form id="addListingForm" action="/listings" method="POST">
   <label for="pictures">Pictures (comma-separated URLs):</label>
   <input type="text" id="pictures" name="pictures" required>
 
-  <label for="bedrooms">Bedrooms:</label>
-  <input type="number" id="bedrooms" name="bedrooms" required>
+  <label for="bedrooms">Bedrooms (1-10):</label>
+  <input type="number" id="bedrooms" name="bedrooms" min="1" max="10" required>
 
-  <label for="bathrooms">Bathrooms:</label>
+  <label for="bathrooms">Bathrooms (1-10):</label>
   <input type="number" id="bathrooms" name="bathrooms" required>
 
-  <label for="sqFootage">Square Footage:</label>
-  <input type="number" id="sqFootage" name="sqFootage" required>
+  <label for="sqFootage">Square Footage (500-10000):</label>
+  <input type="number" id="sqFootage" name="sqFootage" min="500" max="10000" required>
 
-  <label for="reservation">Reservation Date:</label>
-  <input type="date" id="reservation" name="reservation">
+  <label for="startDate">Start Date:</label>
+  <input type="date" id="startDate" name="startDate" required>
+
+  <label for="endDate">End Date:</label>
+  <input type="date" id="endDate" name="endDate" required>
+
+  <label for="address">Address:</label>
+  <input type="text" id="address" name="address" required>
 
   <button type="submit">Add Listing</button>
 </form>
