--- a/views/newlistings/new.ejs
+++ b/views/newlistings/new.ejs
@@ -14,16 +14,17 @@
   <label for="sqFootage">Square Footage (500-10000):</label>
   <input type="number" id="sqFootage" name="sqFootage" min="500" max="10000" required>
 
-  <label for="startDate">Start Date:</label>
-  <input type="date" id="startDate" name="startDate" required>
-
-  <label for="endDate">End Date:</label>
-  <input type="date" id="endDate" name="endDate" required>
+  <label for="pricePerNight">Price per Night ($200-$3000):</label>
+  <input type="number" id="pricePerNight" name="pricePerNight" min="200" max="3000" required>
 
   <label for="address">Address:</label>
   <input type="text" id="address" name="address" required>
 
   <button type="submit">Add Listing</button>
 </form>
+
+<% if (saved) { %>
+  <p>Saved!</p>
+<% } %>
 
 <%- include('../partials/footer') %>
