--- a/views/all-listings/listings.ejs
+++ b/views/all-listings/listings.ejs
@@ -1,16 +1,30 @@
 
 <%- include('../partials/header') %>
 
-<ul>
-    <% listings.forEach(listing => { %>
-        <li>
-            <h3><%= listing.address %></h3>
-            <p>Bedrooms: <%= listing.bedrooms %></p>
-            <p>Bathrooms: <%= listing.bathrooms %></p>
-            <p>Square Footage: <%= listing.sqFootage %></p>
-            <!-- Add more details as needed -->
-        </li>
-    <% }); %>
-</ul>
+<h2>All Listings</h2>
+
+<% if (listings.length > 0) { %>
+  <div class="listings-container">
+    <% listings.forEach((listing) => { %>
+      <div class="listing">
+        <h3><%= listing.address %></h3>
+        <ul>
+          <li>Bedrooms: <%= listing.bedrooms %></li>
+          <li>Bathrooms: <%= listing.bathrooms %></li>
+          <li>Square Footage: <%= listing.sqFootage %> sq ft</li>
+          <li>Price per Night: $<%= listing.pricePerNight.toFixed(2) %></li>
+        </ul>
+
+        <div class="pictures-container">
+          <% listing.pictures.forEach((picture) => { %>
+            <img src="<%= picture %>" alt="Listing Picture">
+          <% }) %>
+        </div>
+      </div>
+    <% }) %>
+  </div>
+<% } else { %>
+  <p>No listings available.</p>
+<% } %>
 
 <%- include('../partials/footer') %>
