--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -79,3 +79,38 @@ footer {
 #addListingForm button:hover {
   background-color: #45a049;
 }
+
+.listings-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  align-items: center; /* Center vertically */
+}
+
+.listing {
+  border: 1px solid #ccc;
+  padding: 10px;
+  width: calc(50% - 20px); /* Adjust the width based on your preference */
+  box-sizing: border-box;
+  background-color: #fff; /* Set the background color to white */
+}
+
+.pictures-container {
+  display: flex;
+  justify-content: center; /* Center pictures horizontally */
+  overflow: hidden;
+  height: 150px;
+}
+
+.pictures-container img {
+  width: calc(33.33% - 10px); /* Adjusted width with margin */
+  height: 100%;
+  object-fit: cover;
+  margin: 0 5px; /* Add margin to create space between pictures */
+}
+
+.listing-details {
+  margin-top: 10px;
+  font-weight: bold; /* Make the font bold */
+}
