--- a/views/all-listings/listings.ejs
+++ b/views/all-listings/listings.ejs
@@ -1,24 +1,24 @@
-
 <%- include('../partials/header') %>
-
-<h2>All Listings</h2>
 
 <% if (listings.length > 0) { %>
   <div class="listings-container">
     <% listings.forEach((listing) => { %>
       <div class="listing">
-        <h3><%= listing.address %></h3>
-        <ul>
-          <li>Bedrooms: <%= listing.bedrooms %></li>
-          <li>Bathrooms: <%= listing.bathrooms %></li>
-          <li>Square Footage: <%= listing.sqFootage %> sq ft</li>
-          <li>Price per Night: $<%= listing.pricePerNight.toFixed(2) %></li>
-        </ul>
-
         <div class="pictures-container">
-          <% listing.pictures.forEach((picture) => { %>
+          <% listing.pictures.slice(0, 3).forEach((picture, index) => { %>
             <img src="<%= picture %>" alt="Listing Picture">
           <% }) %>
+        </div>
+
+        <div class="listing-details">
+          <h3><%= listing.address %></h3>
+          <ul>
+            <li>Bedrooms: <%= listing.bedrooms %></li>
+            <li>Bathrooms: <%= listing.bathrooms %></li>
+            <li>Square Footage: <%= listing.sqFootage %> sq ft</li>
+            <li>Price per Night: $<%= listing.pricePerNight.toFixed(2) %></li>
+            <!-- Add more details as needed -->
+          </ul>
         </div>
       </div>
     <% }) %>
