--- a/views/all-listings/listings.ejs
+++ b/views/all-listings/listings.ejs
@@ -21,7 +21,7 @@
           </ul>
           <div class="listing-options">
             <a href="/all-listings/review/<%= listing._id %>" class="review-link">Review</a>
-            <a href="/all-listings/reserve/<%= listing._id %>" class="reserve-link">Reserve</a>
+            <a href="/reservations/<%= listing._id %>/reserve" class="reserve-link">Reserve</a>
              <a href="/all-listings/delete/<%= listing._id %>" class="delete-link">Delete</a>
           </div>
         </div>
