--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -139,3 +139,59 @@ footer {
 .listing-options a:hover {
   color: #a60000; 
 }
+
+.reservation-form-container{
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+
+.reservation-form-container form {
+  display: grid;
+  gap: 10px;
+  text-align: left;
+}
+
+.reservation-form-container label {
+  font-weight: bold;
+  display: block;
+  margin-bottom: 5px;
+}
+
+.reservation-form-container input {
+  width: calc(100% - 20px);
+  padding: 8px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.reservation-form-container button {
+  width: 100%;
+  padding: 10px 20px;
+  background-color: #4caf50;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.reservation-form-container button:hover {
+  background-color: #45a049;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
