--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
       <a href="/all-listings" <%- title === 'All Listings' ? 'class="active"' : '' %>>ALL LISTINGS</a>
       <% if (user) { %>
         <a href="/newlistings/new" <%- title === 'Add Listing' ? 'class="active"' : '' %>>ADD LISTING</a>
-        <a href="/listings/reserve" <%- title === 'Reserve Listing' ? 'class="active"' : '' %>>RESERVE LISTING</a>
+        <a href="/reservations/reservedlistings" <%- title === 'Reserved Listings' ? 'class="active"' : '' %>>RESERVED LISTINGS</a>
         <a href="/listings/review" <%- title === 'Review Listing' ? 'class="active"' : '' %>>REVIEW LISTING</a>
         <a href="/logout">LOG OUT</a>
       <% } else { %>
