--- a/views/reservations/form.ejs
+++ b/views/reservations/form.ejs
@@ -3,7 +3,7 @@
 <div class="reservation-form-container">
 
 
-  <h3><%= listing.address %></h3>
+  <h3 class="listing-address"><%= listing.address %></h3>
   <div class="pictures-container">
     <% listing.pictures.slice(0, 3).forEach((picture, index) => { %>
       <img src="<%= picture %>" alt="Listing Picture">
