Fixed bug causing form to not update

--- a/views/reservedlistings.ejs
+++ b/views/reservedlistings.ejs
@@ -17,8 +17,8 @@
       </ul>
 
       <div class="reservation-actions">
-        <a href="/reservations/<%= reservation._id %>/update">Update</a>
-        <a href="/reservations/<%= reservation._id %>/delete">Delete</a>
+        <a href="/reservedlistings/<%= reservation._id %>/update">Update</a>
+        <a href="/reservedlistings/<%= reservation._id %>/delete">Delete</a>
       </div>
 
       <hr class="reservation-separator">
