--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,7 +16,6 @@ nav {
   color: #fff;
   padding: 10px;
   text-align: center;
-  backdrop-filter: blur(20px); 
 }
 
 nav a {
@@ -220,4 +219,47 @@ footer {
 
 .listing-address{
   color: #a60000;
+}
+
+.update-form-container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.updateform-title {
+  text-align: center;
+  margin-bottom: 20px;
+  color:#a60000
+}
+
+.update-form-container input {
+  width: calc(100% - 20px);
+  padding: 8px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.update-form-container button {
+  width: 100%;
+  padding: 10px 20px;
+  background-color: #4caf50;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.update-form-container button:hover {
+  background-color: #45a049;
 }
