--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,3 @@
 <footer>
-    <p>&copy; 2023 bookings. All rights reserved.</p>
+    <p>&copy; 2023 Nathaniel Simmons. All rights reserved.</p>
 </footer>
