--- a/views/all-listings/listings.ejs
+++ b/views/all-listings/listings.ejs
@@ -20,7 +20,7 @@
             <li>Price per Night: $<%= listing.pricePerNight.toFixed(2) %></li>
           </ul>
           <div class="listing-options">
-            <a href="/all-listings/review/<%= listing._id %>" class="review-link">Review</a>
+            <!-- <a href="/all-listings/<%= listing._id %>/review" class="review-link">Review</a> -->
             <a href="/reservations/<%= listing._id %>/reserve" class="reserve-link">Reserve</a>
              <a href="/all-listings/delete/<%= listing._id %>" class="delete-link">Delete</a>
           </div>
