Updated background image in CSS

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: url('https://empire-s3-production.bobvila.com/articles/wp-content/uploads/2021/11/The-Best-Rental-Listing-Site-Options.jpg') center/cover no-repeat fixed;
+  background: url('https://media.carusohomes.com/46/2024/2/16/Exterior-Front_Elevation-dsc2724.vd2_-_edited.jpg?width=1000&b=769f8c4&ois=cb55d30&fit=bounds&height=529') center/cover no-repeat fixed;
   background-color: rgba(255, 255, 255, 0.7);
 }
 
